02-analise-sintatica/trab02/miniCParser.py
# Generated from miniC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class miniCParser ( Parser ):

    grammarFileName = "miniC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "','", "';'", "'float'", "'char'", 
                     "'void'", "'('", "')'", "'{'", "'}'", "'if'", "'else'", 
                     "'while'", "'for'", "'break'", "'continue'", "'return'", 
                     "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'++'", "'--'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "Identifier", "CONSTANT_INT", "WS" ]

    RULE_program = 0
    RULE_definition = 1
    RULE_data_definition = 2
    RULE_declarator = 3
    RULE_function_definition = 4
    RULE_type = 5
    RULE_function_header = 6
    RULE_parameter_list = 7
    RULE_parameter_declaration = 8
    RULE_function_body = 9
    RULE_statement = 10
    RULE_block = 11
    RULE_expression = 12
    RULE_binary = 13
    RULE_unary = 14
    RULE_primary = 15
    RULE_argument_list = 16

    ruleNames =  [ "program", "definition", "data_definition", "declarator", 
                   "function_definition", "type", "function_header", "parameter_list", 
                   "parameter_declaration", "function_body", "statement", 
                   "block", "expression", "binary", "unary", "primary", 
                   "argument_list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    Identifier=37
    CONSTANT_INT=38
    WS=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(miniCParser.DefinitionContext,i)


        def getRuleIndex(self):
            return miniCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = miniCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 34
                self.definition()
                self.state = 37 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 114) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_definition(self):
            return self.getTypedRuleContext(miniCParser.Data_definitionContext,0)


        def function_definition(self):
            return self.getTypedRuleContext(miniCParser.Function_definitionContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)




    def definition(self):

        localctx = miniCParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        try:
            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.data_definition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.function_definition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.DeclaratorContext)
            else:
                return self.getTypedRuleContext(miniCParser.DeclaratorContext,i)


        def getRuleIndex(self):
            return miniCParser.RULE_data_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_definition" ):
                listener.enterData_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_definition" ):
                listener.exitData_definition(self)




    def data_definition(self):

        localctx = miniCParser.Data_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_data_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(miniCParser.T__0)
            self.state = 44
            self.declarator()
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 45
                self.match(miniCParser.T__1)
                self.state = 46
                self.declarator()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(miniCParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(miniCParser.Identifier, 0)

        def getRuleIndex(self):
            return miniCParser.RULE_declarator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarator" ):
                listener.enterDeclarator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarator" ):
                listener.exitDeclarator(self)




    def declarator(self):

        localctx = miniCParser.DeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declarator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(miniCParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(miniCParser.TypeContext,0)


        def function_header(self):
            return self.getTypedRuleContext(miniCParser.Function_headerContext,0)


        def function_body(self):
            return self.getTypedRuleContext(miniCParser.Function_bodyContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_function_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition" ):
                listener.enterFunction_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition" ):
                listener.exitFunction_definition(self)




    def function_definition(self):

        localctx = miniCParser.Function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.type_()
            self.state = 57
            self.function_header()
            self.state = 58
            self.function_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniCParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = miniCParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 114) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarator(self):
            return self.getTypedRuleContext(miniCParser.DeclaratorContext,0)


        def parameter_list(self):
            return self.getTypedRuleContext(miniCParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_function_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_header" ):
                listener.enterFunction_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_header" ):
                listener.exitFunction_header(self)




    def function_header(self):

        localctx = miniCParser.Function_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.declarator()
            self.state = 63
            self.parameter_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_declaration(self):
            return self.getTypedRuleContext(miniCParser.Parameter_declarationContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_parameter_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_list" ):
                listener.enterParameter_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_list" ):
                listener.exitParameter_list(self)




    def parameter_list(self):

        localctx = miniCParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(miniCParser.T__6)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 114) != 0):
                self.state = 66
                self.parameter_declaration()


            self.state = 69
            self.match(miniCParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.TypeContext)
            else:
                return self.getTypedRuleContext(miniCParser.TypeContext,i)


        def declarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.DeclaratorContext)
            else:
                return self.getTypedRuleContext(miniCParser.DeclaratorContext,i)


        def getRuleIndex(self):
            return miniCParser.RULE_parameter_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_declaration" ):
                listener.enterParameter_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_declaration" ):
                listener.exitParameter_declaration(self)




    def parameter_declaration(self):

        localctx = miniCParser.Parameter_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.type_()
            self.state = 72
            self.declarator()
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 73
                self.match(miniCParser.T__1)
                self.state = 74
                self.type_()
                self.state = 75
                self.declarator()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.Data_definitionContext)
            else:
                return self.getTypedRuleContext(miniCParser.Data_definitionContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniCParser.StatementContext,i)


        def getRuleIndex(self):
            return miniCParser.RULE_function_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_body" ):
                listener.enterFunction_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_body" ):
                listener.exitFunction_body(self)




    def function_body(self):

        localctx = miniCParser.Function_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(miniCParser.T__8)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 83
                self.data_definition()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 515396332168) != 0):
                self.state = 89
                self.statement()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self.match(miniCParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(miniCParser.ExpressionContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniCParser.StatementContext,i)


        def block(self):
            return self.getTypedRuleContext(miniCParser.BlockContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = miniCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 7, 35, 36, 37, 38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 515396075648) != 0):
                    self.state = 97
                    self.expression()


                self.state = 100
                self.match(miniCParser.T__2)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.match(miniCParser.T__10)
                self.state = 102
                self.match(miniCParser.T__6)
                self.state = 103
                self.expression()
                self.state = 104
                self.match(miniCParser.T__7)
                self.state = 105
                self.statement()
                self.state = 108
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 106
                    self.match(miniCParser.T__11)
                    self.state = 107
                    self.statement()


                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.match(miniCParser.T__12)
                self.state = 111
                self.match(miniCParser.T__6)
                self.state = 112
                self.expression()
                self.state = 113
                self.match(miniCParser.T__7)
                self.state = 114
                self.statement()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.match(miniCParser.T__13)
                self.state = 117
                self.match(miniCParser.T__6)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 515396075648) != 0):
                    self.state = 118
                    self.expression()


                self.state = 121
                self.match(miniCParser.T__2)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 515396075648) != 0):
                    self.state = 122
                    self.expression()


                self.state = 125
                self.match(miniCParser.T__2)
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 515396075648) != 0):
                    self.state = 126
                    self.expression()


                self.state = 129
                self.match(miniCParser.T__7)
                self.state = 130
                self.statement()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 5)
                self.state = 131
                self.match(miniCParser.T__14)
                self.state = 132
                self.match(miniCParser.T__2)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 6)
                self.state = 133
                self.match(miniCParser.T__15)
                self.state = 134
                self.match(miniCParser.T__2)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 7)
                self.state = 135
                self.match(miniCParser.T__16)
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 515396075648) != 0):
                    self.state = 136
                    self.expression()


                self.state = 139
                self.match(miniCParser.T__2)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 8)
                self.state = 140
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniCParser.StatementContext,i)


        def getRuleIndex(self):
            return miniCParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = miniCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(miniCParser.T__8)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 515396332168) != 0):
                self.state = 144
                self.statement()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(miniCParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def binary(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.BinaryContext)
            else:
                return self.getTypedRuleContext(miniCParser.BinaryContext,i)


        def getRuleIndex(self):
            return miniCParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = miniCParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.binary(0)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 153
                self.match(miniCParser.T__1)
                self.state = 154
                self.binary(0)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(miniCParser.Identifier, 0)

        def binary(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.BinaryContext)
            else:
                return self.getTypedRuleContext(miniCParser.BinaryContext,i)


        def unary(self):
            return self.getTypedRuleContext(miniCParser.UnaryContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_binary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinary" ):
                listener.enterBinary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinary" ):
                listener.exitBinary(self)



    def binary(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = miniCParser.BinaryContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_binary, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 161
                self.match(miniCParser.Identifier)
                self.state = 162
                self.match(miniCParser.T__17)
                self.state = 163
                self.binary(18)
                pass

            elif la_ == 2:
                self.state = 164
                self.match(miniCParser.Identifier)
                self.state = 165
                self.match(miniCParser.T__18)
                self.state = 166
                self.binary(17)
                pass

            elif la_ == 3:
                self.state = 167
                self.match(miniCParser.Identifier)
                self.state = 168
                self.match(miniCParser.T__19)
                self.state = 169
                self.binary(16)
                pass

            elif la_ == 4:
                self.state = 170
                self.match(miniCParser.Identifier)
                self.state = 171
                self.match(miniCParser.T__20)
                self.state = 172
                self.binary(15)
                pass

            elif la_ == 5:
                self.state = 173
                self.match(miniCParser.Identifier)
                self.state = 174
                self.match(miniCParser.T__21)
                self.state = 175
                self.binary(14)
                pass

            elif la_ == 6:
                self.state = 176
                self.match(miniCParser.Identifier)
                self.state = 177
                self.match(miniCParser.T__22)
                self.state = 178
                self.binary(13)
                pass

            elif la_ == 7:
                self.state = 179
                self.unary()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 217
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 215
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                    if la_ == 1:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 182
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 183
                        self.match(miniCParser.T__23)
                        self.state = 184
                        self.binary(13)
                        pass

                    elif la_ == 2:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 185
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 186
                        self.match(miniCParser.T__24)
                        self.state = 187
                        self.binary(12)
                        pass

                    elif la_ == 3:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 188
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 189
                        self.match(miniCParser.T__25)
                        self.state = 190
                        self.binary(11)
                        pass

                    elif la_ == 4:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 191
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 192
                        self.match(miniCParser.T__26)
                        self.state = 193
                        self.binary(10)
                        pass

                    elif la_ == 5:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 194
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 195
                        self.match(miniCParser.T__27)
                        self.state = 196
                        self.binary(9)
                        pass

                    elif la_ == 6:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 197
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 198
                        self.match(miniCParser.T__28)
                        self.state = 199
                        self.binary(8)
                        pass

                    elif la_ == 7:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 200
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 201
                        self.match(miniCParser.T__29)
                        self.state = 202
                        self.binary(7)
                        pass
